--- a/VueJs_Practice/css/listview.css
+++ b/VueJs_Practice/css/listview.css
@@ -136,7 +136,7 @@ a:hover {
 .list li {
     border-bottom: 1px solid #fff;
     overflow: hidden;
-    padding: 20px;
+    padding: 5px;
     transition: background 0.2s linear;
 }
 
@@ -179,12 +179,13 @@ a:hover {
 
 .waggon-image img {
     max-width: 100%;
+    /*opacity: 0.3;*/
 }
 
 .row-placeholder {
     width: 100%;
     height: 100px;
-    background-color: yellow;
+    /*background-color: yellow;*/
     border: none;
     position: absolute;
     left: 0;
@@ -204,33 +205,34 @@ a:hover {
 }
 
 button {
-    height: 100%;
-    width: 20%;
+    height: 98%;
+    width: 19%;
     position: absolute;
     background-color: green;
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
     border-radius: 10px;
+    border: none;
 }
 
 .col1 {
-    left: 0;
+    left: 1%;
 }
 
 .col2 {
-    left: 20%;
+    left: 21%;
 }
 
 .col3 {
-    left: 40%;
+    left: 41%;
 }
 
 .col4 {
-    left: 60%;
+    left: 61%;
 }
 
 .col5 {
-    left: 80%;
+    left: 81%;
 }
 
 .reserved {
