--- a/magnolia-module-geologix/src/main/resources/geologix/webresources/css/listview.css
+++ b/magnolia-module-geologix/src/main/resources/geologix/webresources/css/listview.css
@@ -45,7 +45,7 @@ a:hover {
     position: relative;
     text-align: left;
     width: 100%;
-    height: 50px;
+    height: 60px;
 }
 
 .tool-bar a {
@@ -246,7 +246,23 @@ button {
 .home-btn {
     width: 40px;
 }
-.home-btn img {
-    width: 25px;
+.home-btn {
+    background-image: url(../img/home.svg);
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 40px;
+    height: 40px;
     cursor: pointer;
+    float: left;
+}
+.back-icon {
+    background-image: url(../img/back.svg);
+    width: 40px;
+    height: 40px;
+    float: left;
+    cursor: pointer;
+}
+.infopanel {
+    text-align: center;
+    font-size: 23px;
 }
