--- a/magnolia-module-geologix/src/main/resources/geologix/webresources/css/listview.css
+++ b/magnolia-module-geologix/src/main/resources/geologix/webresources/css/listview.css
@@ -185,11 +185,15 @@ a:hover {
 .row-placeholder {
     width: 100%;
     height: 100px;
-    /*background-color: yellow;*/
-    border: none;
     position: absolute;
     left: 0;
     opacity: 0.2;
+}
+.row-placeholder button {
+    cursor: pointer;
+}
+.row-placeholder button:disabled {
+    cursor: initial;
 }
 
 .row1 {
