Form validation works, reset button added, removing spaces for the zugservice POST request in attributes 'from' and 'to'

--- a/magnolia-module-geologix/src/main/resources/geologix/webresources/css/listview.css
+++ b/magnolia-module-geologix/src/main/resources/geologix/webresources/css/listview.css
@@ -307,6 +307,9 @@ button {
     background-color: #a0e100;
     border-color: #a0e100;
 }
+.el-button--reset {
+    right: 200px;
+}
 .el-form {
     padding: 30px;
     background-color: rgba(160, 225, 0, 0.3);
