--- a/VueJs_Practice/css/listview.css
+++ b/VueJs_Practice/css/listview.css
@@ -277,6 +277,7 @@ button {
     cursor: pointer;
     text-align: center;
 }
+
 .zugservice p span {
     font-size: 25px;
 }
@@ -286,9 +287,11 @@ button {
     margin: 0 30px;
     border-radius: 3px;
 }
+
 #container {
     margin-top: 5px;
 }
+
 #home {
     max-width: 600px;
     min-width: 300px;
@@ -296,22 +299,40 @@ button {
     color: #5e5b64;
     font: 17px/1.3 "Open Sans", sans-serif;
 }
+
 .el-button {
     height: initial;
     width: initial;
 }
+
 .el-button--primary {
     background-color: #a0e100;
     border-color: #a0e100;
 }
+
 .el-form {
     padding: 30px;
     background-color: rgba(160, 225, 0, 0.3);
 }
+
 .date-separator {
     border-bottom: 1px solid white;
     text-align: center;
     font-size: 20px;
     background-color: #a0e100;
     padding: 5px;
+}
+
+/*MOBILE*/
+
+@media only screen and (max-width: 400px) {
+    .desktop {
+        display: none;
+    }
+}
+
+@media only screen and (min-width: 401px) {
+    .mobile {
+        display: none;
+    }
 }
