added reservation confirmation dialogue without validation. Restyling homepage, now without personal data input

--- a/magnolia-module-bls/src/main/resources/bls/webresources/css/listview.css
+++ b/magnolia-module-bls/src/main/resources/bls/webresources/css/listview.css
@@ -338,6 +338,17 @@ button {
     max-width: 220px;
 }
 
+.reservation-modal button{
+    height: initial;
+    width: initial;
+    position: relative;
+}
+
+.reservation-modal.swal2-input{
+    width: initial;
+    height: initial;
+}
+
 
 /*MOBILE*/
 
