Minor JS fixes.

--- a/magnolia-module-bls/src/main/resources/bls/webresources/css/listview.css
+++ b/magnolia-module-bls/src/main/resources/bls/webresources/css/listview.css
@@ -363,6 +363,9 @@ button {
     .waggon, .zugservice-detail {
         margin: initial;
     }
+    .swal2-header img.swal2-image {
+        width: 25%;
+    }
 }
 
 @media only screen and (min-width: 401px) {
