--- a/VueJs_Practice/css/listview.css
+++ b/VueJs_Practice/css/listview.css
@@ -327,6 +327,17 @@ button {
 .date-separator p span {
     font-size: 25px;
 }
+.no-zugservices {
+    color: red;
+    padding: 30px;
+    background-color: rgba(255, 198, 198, 0.5);
+    border: 1px solid red;
+    text-align: center;
+}
+
+
+
+
 /*MOBILE*/
 
 @media only screen and (max-width: 400px) {
