--- a/magnolia-module-bls/src/main/resources/bls/webresources/css/listview.css
+++ b/magnolia-module-bls/src/main/resources/bls/webresources/css/listview.css
@@ -348,6 +348,13 @@ button {
     width: initial;
     height: initial;
 }
+.no-zugservices {
+    color: red;
+    padding: 30px;
+    background-color: rgba(255, 198, 198, 0.5);
+    border: 1px solid red;
+    text-align: center;
+}
 
 
 /*MOBILE*/
