Error message handling by VueJS.

--- a/magnolia-module-bls/src/main/resources/bls/webresources/css/listview.css
+++ b/magnolia-module-bls/src/main/resources/bls/webresources/css/listview.css
@@ -355,6 +355,11 @@ button {
     border: 1px solid red;
     text-align: center;
 }
+button.swal2-confirm {
+    height: initial;
+    position: initial;
+    width: initial;
+}
 
 
 /*MOBILE*/
